--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <aside class="side">
             <figure id="picture" class="picture">
                 <div class="picture-shadow"></div>
-                <img id="pictureImage" class="picture-image" src="images/IMG1.png" srcset="images/IMG1.png 1x, images/IMG1.png 2x, images/IMG1.png 3x" alt="Portrait of Diptanshu Mann" width="320" height="320">
+                <img id="pictureImage" class="picture-image" src="images/IMG1.png" alt="Portrait of Diptanshu Mann" width="320" height="320">
             </figure>
         </aside>
         <main class="about">
