--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    I am a BTech ECE-IoT Undergraduate. I consider myself a tech enthusiast with a good command over logic and algorithm building. I have a keen interest in IoT and AI domains. My aim is to grow as a person and as a professional every day.
+                    I am a Master's student in Robotics at the University of Bristol. Being an avid tech enthusiast, my passion revolves around robotics, artificial intelligence, and the internet of things. I completed my bachelor's degree in ECE-IoT. I strive to grow every day as a person and as a professional.
                 </p>
             </div>
             <div class="contact">
