--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    I am a Master's student in Robotics at the University of Bristol. Being an avid tech enthusiast, my passion revolves around robotics, artificial intelligence, and the internet of things. I completed my bachelor's degree in ECE-IoT. I strive to grow every day as a person and as a professional.
+                    I am a Master's student in Robotics at the University of Bristol. Being an avid tech enthusiast, my passion revolves around robotics, AI, and IOT. I completed my bachelor's degree in ECE-IoT. I strive to grow every day as a person and as a professional.
                 </p>
             </div>
             <div class="contact">
