--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Diptanshu</span><br> Robotics Engineer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Diptanshu</span><br> Robotics & AI Engineer</h1>
 
                     <a href="mailto:diptanshu@duck.com" class="button">Contact</a>
                 </div>
