--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Diptanshu Mann</h2>
-                        <p class="about__text">A master's student in robotics at the University of Bristol. Being an avid tech enthusiast, my passion revolves around robotics, AI, and IoT. I completed my bachelor's degree in ECE-IoT. I strive to grow every day as a person and as a professional. </p>           
+                        <p align="justify" class="about__text">A master's student in robotics at the University of Bristol. Being an avid tech enthusiast, my passion revolves around robotics, AI, and IoT. I completed my bachelor's degree in ECE-IoT. I strive to grow every day as a person and as a professional. </p>           
                     </div>                                   
                 </div>
             </section>
@@ -92,7 +92,7 @@
                       <div class="divider"></div>
                       <div class="right-part">
                         <h4 class="item-title">MSc Robotics</h4>
-                        <p>Currently studying Robotics as my Masters degree.<br> Studied Key modules like: Robotics Fundamentals | Robotics Systems | Machine Vision | Robotics Research Technology and Methods | Introduction to Artificial Intelligence | Human-Robot Interaction | Intelligent Information Systems | Assistive Robotics. </p>
+                        <p>Currently studying Robotics as my Masters degree.<br> <b>Key Modules Studied: </b><br>Robotics Fundamentals | Robotics Systems | Machine Vision | Robotics Research Technology and Methods | Introduction to Artificial Intelligence | Human-Robot Interaction | Intelligent Information Systems | Assistive Robotics. </p>
                       </div>
                     </div>
 
@@ -104,7 +104,7 @@
                       <div class="divider"></div>
                       <div class="right-part">
                         <h4 class="item-title">B.Tech Electronics and Communications Engineering with specialization in Internet of things</h4>
-                        <p>I earned a 1st Class Honours grade in my Bachelors degree in ECE with specialization in IoT.<br> Studied Key modules like: Applied Mathematics | Applied Physics | Analog Electronics | Signals & Systems | Digital Electronics and Circuits | Data Structures and Algorithms | Hardware Digital Design | Hardware Digital Design | Control Engineering | Microcontroller and Interfacing | Object Oriented Programming using java | Internet of things | IoT Design, Analytics and Security</p>
+                        <p>I earned a 1st Class Honours grade in my undergraduates degree in ECE with specialization in IoT.<br><b> Key Modules Studied:</b> <br>Applied Mathematics | Applied Physics | Analog Electronics | Signals & Systems | Digital Electronics and Circuits | Data Structures and Algorithms | Hardware Digital Design | Hardware Digital Design | Control Engineering | Microcontroller and Interfacing | Object Oriented Programming using java | Internet of things | IoT Design, Analytics and Security</p>
                       </div>
                     </div>
                   </div>
