--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 })
             }; 
             function openMailer(element) {
-            var y = decode("znvygb:znaaqvcgnafuh@tznvy.pbz");
+            var y = decode("znvygb:qvcgnafuh@qhpx.pbz");
             element.setAttribute("href", y);
             element.setAttribute("onclick", "");
             element.firstChild.nodeValue = "Open e-mail software";
