--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li class="nav__item"><a href="#experience" class="nav__link">Experience</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="mailto:diptanshu@duck.com" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href=" " id="email" class="nav__link" onclick='openMailer(this);'>Contact</a></li>
                     </ul>
                 </div>
 
@@ -411,7 +411,7 @@
             var y = decode("znvygb:qvcgnafuh@qhpx.pbz");
             element.setAttribute("href", y);
             element.setAttribute("onclick", "");
-            element.firstChild.nodeValue = "Open e-mail software";
+            element.firstChild.nodeValue = "Contact";
             };
         </script>
 
