--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         </div>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <span class="skills__name">C++</span>
+                                <span class="skills__name">C</span>
                             </div>
                             <div class="skills__bar skills__ux">
                                 
